Center text and fix spacing

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -17,7 +17,7 @@ html {
     width: 1610px;
     margin-left:auto;
     margin-right:auto;
-    background-color: #e7edfc;
+    background-color: #f1f2f2;
 
 }
 
@@ -88,6 +88,7 @@ h1 {
     height: 636px;
     padding:0px;
     background-image:url('redesign2/main_notabs.jpg');
+    text-align: center;
 }
 
 
